# vitality

./: .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
libs/: meson.build
libs/juce-plugin/: JucePluginMain.cpp
libs/juce6.0/: meson.build
vitality/: JuceHeader.h  JucePluginCharacteristics.h  meson.build
vitality/resources/: BinaryData.cpp
vitality/source/common/: load_save.cpp  synth_base.cpp  synth_constants.h  synth_parameters.cpp
vitality/source/common/wavetable/: wavetable_creator.cpp
vitality/source/interface/editor_components/: synth_preset_selector.cpp
vitality/source/interface/editor_sections/: about_section.cpp  distortion_section.cpp  distortion_section.h  full_interface.cpp
vitality/source/plugin/: synth_plugin.cpp
vitality/source/synthesis/effects/: distortion.cpp  distortion.h
