option('optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable various math-related optimizations',
)

option('lto-optimizations',
    type: 'boolean',
    value: false,
    description: 'Enable LTO optimizations',
)

option('neon-optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable NEON optimizations',
)

option('sse-optimizations',
    type: 'boolean',
    value: true,
    description: 'Enable SSE optimizations',
)

option('linux-headless',
    type: 'boolean',
    value: false,
    description: 'DSP-only plugin builds, without editor/GUI',
)

option('build-standalone',
    type: 'boolean',
    value: true,
    description: 'Build standalone plugin variants',
)

option('build-lv2',
    type: 'boolean',
    value: true,
    description: 'Build LV2 plugin variants',
)

option('build-vst2',
    type: 'boolean',
    value: true,
    description: 'Build VST2 plugin variants',
)

option('build-vst3',
    type: 'boolean',
    value: true,
    description: 'Build VST3 plugin variants',
)

option('build-universal',
    type: 'boolean',
    value: false,
    description: 'Build macOS universal binaries',
)
